change layout 1st edition

--- a/v1.0 - 1/aboutCompany.html
+++ b/v1.0 - 1/aboutCompany.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-  <head>
+   <head>
     <title>About Company</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/flexbox.css" rel="stylesheet">
-    <link href="css/font.css" rel="stylesheet">
-
 
   </head>
 
+
   <body>
-    <section id="top">
-        <a class="menuImage" href="home.html">
-          <img src="img/logo.png" alt="logo">
-          <h1>Sunrise Realty</h1>
-        </a>
-        <div id="search">
-          <form>
-            <input type="text" area="Area" class="search-box">
-            <input type="submit" value="Search" class="button">
-          </form>
-        </div>
-    </section>
-      <div id="main-nav">
-          <a class="nav-main" href="home.html">Home</a>
-          <div class="nav-main" id="about">
-            <i class="dropbtn">About Us</i>
-            <div class="dropdown-content" id="aboutsub">
-              <a href="aboutCompany.html">About Company</a>
-              <a href="officialStatement.html">Official Statement</a>
-            </div>
-          </div>
-          <a class="nav-main" href="salesTeam.html">Sales Team</a>
-          <div class="nav-main" id="find">
-            <i class="dropbtn">Find Realty</i>
-            <div class="dropdown-content" id="findsub">
-              <a href="search.html">Search</a>
-              <a href="house.html">House</a>
-              <a href="apartment.html">Apartment</a>
-              <a href="townhouse.html">Townhouse</a>
-            </div>
-          </div>
-          <a class="nav-main" href="contactUs.html">Contact Us</a>
+    <section id="header">
+      <div id="headercont">
+      <div id="header1">
+          <a href="home.html">
+              <img src="img/logo.png" alt="logo">
+          </a>
       </div>
+      <div id="header2">
+        <table class="menu">
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="search.html">Search</a></td>
+        </tr>
+        <tr>
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="house.html">House</a></td>
+        </tr>
+        <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Apartment</a></td>
+        </tr>
+        <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td><a href="townhouse.html">Townhouse</a></td>
+        </tr>
+      </table>
+      </div>
+        <div id="header3">
+          <form>
+              <input type="text" area="Area" class="search-box">
+              <input type="submit" value=" Search " class="button">
+            </form>
+        </div>
+        <div id="header4">
+          <div class="nav-main" id="find">
+            <button type="button">Menu</button>
+            <div class="dropdown-content">
+              <a href="aboutCompany.html">About Company</a>
+                <a href="officialStatement.html">Official Statement</a>
+                <a href="salesTeam.html">Sales Team</a>
+                <a href="contactUs.html">Contact Us</a>
+                <a href="search.html">Search</a>
+                <a href="house.html">House</a>
+                <a href="apartment.html">Apartment</a>
+                <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div>
+
+
+        </div>
+    </div>
+    </section>
     <section>
       <div class="infor">
         <h2>
@@ -54,22 +71,55 @@
         </h2>
         <p>balabalalbala</p>
         <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
       </div>
   </section>
 
-  <div class="footer">
-      <div id="footer-info">
-          <h4>Company Information</h4>
-          <p>TEL: 604-000-0000</p> </br>
-          <p>info@sunriserealty.ca</p> 
-      </div>
-      <div id="qr" >
-          <img src="img/QRcode.jpeg" alt="qrcode">
-      </div>
-  </div>
-  <div id="cr">copyringt info</div>
+       <section id="footer">
+      <div id="footercont">
+        <table class="menu">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="search.html">Search</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
+      </div>
+      <div>
+        <p id="cr">Copyright Sunrise Realty 2018</p>
+      </div>
+    </section>
 
 
 
