--- a/v1.0 - 1/detail.html
+++ b/v1.0 - 1/detail.html
@@ -7,113 +7,170 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/flexbox.css" rel="stylesheet">
-    <link href="css/font.css" rel="stylesheet">
-
 
   </head>
 
+
   <body>
-    <section id="top">
-        <a class="menuImage" href="home.html">
-          <img src="img/logo.png" alt="logo">
-          <h1>Sunrise Realty</h1>
-        </a>
-        <div id="search">
+    <section id="header">
+      <div id="headercont">
+      <div id="header1">
+          <a href="home.html">
+              <img src="img/logo.png" alt="logo">
+          </a>
+      </div>
+      <div id="header2">
+        <table class="menu">
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="search.html">Search</a></td>
+        </tr>
+        <tr>
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="house.html">House</a></td>
+        </tr>
+        <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Apartment</a></td>
+        </tr>
+        <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td><a href="townhouse.html">Townhouse</a></td>
+        </tr>
+      </table>
+      </div>
+        <div id="header3">
           <form>
-            <input type="text" area="Area" class="search-box">
-            <input type="submit" value="Search" class="button">
-          </form>
+              <input type="text" area="Area" class="search-box">
+              <input type="submit" value=" Search " class="button">
+            </form>
         </div>
-    </section>
-      <div id="main-nav">
-          <a class="nav-main" href="home.html">Home</a>
-          <div class="nav-main" id="about">
-            <i class="dropbtn">About Us</i>
-            <div class="dropdown-content" id="aboutsub">
-              <a href="aboutCompany.html">About Company</a>
-              <a href="officialStatement.html">Official Statement</a>
-            </div>
-          </div>
-          <a class="nav-main" href="salesTeam.html">Sales Team</a>
+        <div id="header4">
           <div class="nav-main" id="find">
-            <i class="dropbtn">Find Realty</i>
-            <div class="dropdown-content" id="findsub">
-              <a href="search.html">Search</a>
-              <a href="house.html">House</a>
-              <a href="apartment.html">Apartment</a>
-              <a href="townhouse.html">Townhouse</a>
+            <button type="button">Menu</button>
+            <div class="dropdown-content">
+              <a href="aboutCompany.html">About Company</a>
+                <a href="officialStatement.html">Official Statement</a>
+                <a href="salesTeam.html">Sales Team</a>
+                <a href="contactUs.html">Contact Us</a>
+                <a href="search.html">Search</a>
+                <a href="house.html">House</a>
+                <a href="apartment.html">Apartment</a>
+                <a href="townhouse.html">Townhouse</a>
             </div>
           </div>
-          <a class="nav-main" href="contactUs.html">Contact Us</a>
-      </div>
-    <section>
-      <div class="detail-slide-show">
-        <div class="largeview">
-          <img src="img/listing.png">
+
+
         </div>
-
- <div class="smallview">
-
-    <img src="img/listing.png">
-    <img src="img/map.png">
-    <img src="img/map.png">
-    <img src="img/listing.png">
-    <img src="img/map.png">
-    <img src="img/map.png">
-</div>
-
-      </div>
-      <div id="detail-info-group">
+    </div>
+    </section>
+    <section>
+        <div id="banner">
+      <img src="img/listing.png" alt="banner">
+    </div>
       <div id="detail-info">
 
-          <div id="line">
-            <h4>Price: </h4><p>$999,999</p>
-          </div>
-          <div id="line">
-            <h4>Area: </h4><p>Richmond</p>
-          </div>
-          <div id="line">
-            <h4>Address: </h4><p>123 No. 3 Road</p>
-          </div>
-        </div>
-        <div id="detail-info">
-
-          <div id="line">
-            <h4>Bedroom: </h4><p>3</p>
-          </div>
-          <div id="line">
-            <h4>Bathroom: </h4><p>2</p>
-          </div>
-          <div id="line">
-            <h4>Year: </h4><p>2018</p>
-          </div>
-        </div>
-        </div>
-        <div id="detail-button">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+    </div>
+        <div class="more">
           <a href="contactUs.html" class="button-nav" >Contact Us</a>
         </div>
 
-      <div id="detail-des">
-        <h4>Description</h4>
-
-        <p>
-          balabalabala
-        </p>
+       <section>
+      <div class="infor">
+        <h2>
+          Description
+        </h2>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
       </div>
+  </section>
+
     </section>
 
-    <div class="footer">
-        <div id="footer-info">
-         <h4>Company Information</h4>
-         <p>balabalalbala</p>
-         <p>balabalalbala</p>
-        </div>
-        <div id="qr" >
-         <img src="img/logo.png" alt="qrcode">
-        </div>
+         <section id="footer">
+      <div id="footercont">
+        <table class="menu">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="search.html">Search</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
       </div>
-      <div id="cr">copyringt info</div>
+      <div>
+        <p id="cr">Copyright Sunrise Realty 2018</p>
+      </div>
+    </section>
 
 
   </body>
