--- a/v1.0 - 1/search.html
+++ b/v1.0 - 1/search.html
@@ -3,55 +3,72 @@
 
   <head>
     <title>Search</title>
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/flexbox.css" rel="stylesheet">
-    <link href="css/font.css" rel="stylesheet">
-
 
   </head>
 
+
   <body>
-    <section id="top">
-        <a class="menuImage" href="home.html">
-          <img src="img/logo.png" alt="logo">
-          <h1>Sunrise Realty</h1>
-        </a>
-        <div id="search">
-          <form>
-            <input type="text" area="Area" class="search-box">
-            <input type="submit" value="Search" class="button">
-          </form>
-        </div>
-    </section>
-      <div id="main-nav">
-          <a class="nav-main" href="home.html">Home</a>
-          <div class="nav-main" id="about">
-            <i class="dropbtn">About Us</i>
-            <div class="dropdown-content" id="aboutsub">
-              <a href="aboutCompany.html">About Company</a>
-              <a href="officialStatement.html">Official Statement</a>
-            </div>
-          </div>
-          <a class="nav-main" href="salesTeam.html">Sales Team</a>
-          <div class="nav-main" id="find">
-            <i class="dropbtn">Find Realty</i>
-            <div class="dropdown-content" id="findsub">
-              <a href="search.html">Search</a>
-              <a href="house.html">House</a>
-              <a href="apartment.html">Apartment</a>
-              <a href="townhouse.html">Townhouse</a>
-            </div>
-          </div>
-          <a class="nav-main" href="contactUs.html">Contact Us</a>
+    <section id="header">
+      <div id="headercont">
+      <div id="header1">
+          <a href="home.html">
+              <img src="img/logo.png" alt="logo">
+          </a>
       </div>
+      <div id="header2">
+        <table class="menu">
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="search.html">Search</a></td>
+        </tr>
+        <tr>
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="house.html">House</a></td>
+        </tr>
+        <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Apartment</a></td>
+        </tr>
+        <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td><a href="townhouse.html">Townhouse</a></td>
+        </tr>
+      </table>
+      </div>
+        <div id="header3">
+          <form>
+              <input type="text" area="Area" class="search-box">
+              <input type="submit" value=" Search " class="button">
+            </form>
+        </div>
+        <div id="header4">
+          <div class="nav-main" id="find">
+            <button type="button">Menu</button>
+            <div class="dropdown-content">
+              <a href="aboutCompany.html">About Company</a>
+                <a href="officialStatement.html">Official Statement</a>
+                <a href="salesTeam.html">Sales Team</a>
+                <a href="contactUs.html">Contact Us</a>
+                <a href="search.html">Search</a>
+                <a href="house.html">House</a>
+                <a href="apartment.html">Apartment</a>
+                <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div>
+
+
+        </div>
+    </div>
+    </section>
     <section>
 
-      <h2>Search</h2>
-<div id="filter">
-      <select >
+      <h2 class="infor">Search</h2>
+  <div id="filter">
+    <select >
   		<option value="area">Area</option>
   		<option value="Richmond">Richmond</option>
   		<option value="Burnaby">Burnaby</option>
@@ -84,22 +101,239 @@
   		<option value="6">6</option>
 	</select>
 
-	<input type="submit" value="Search" class="button">
+	<input type="submit" value=" Search " class="button">
       </div>
+      </section>
+      <section>
+
+      <div id="pagenum">
+      <a href="#">Pre</a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+      <a href="#">6</a>
+      <a href="#">Next</a>
+    </div>
+
+    <div id="property-list">
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$999,999</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Richmond</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 No. 3 Road</td>
+          <th>Year:</th>
+          <td>2018</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+
+
+    </div>
+
+    <div id="pagenum">
+      <a href="#">Pre</a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+      <a href="#">6</a>
+      <a href="#">Next</a>
+    </div>
+
       </section>
 
 
-      <div class="footer">
-          <div id="footer-info">
-              <h4>Company Information</h4>
-              <p>TEL: 604-000-0000</p> </br>
-              <p>info@sunriserealty.ca</p>
-          </div>
-          <div id="qr" >
-              <img src="img/QRcode.jpeg" alt="qrcode">
-          </div>
+     <section id="footer">
+      <div id="footercont">
+        <table class="menu">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="search.html">Search</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
       </div>
-      <div id="cr">copyringt info</div>
+      <div>
+        <p id="cr">Copyright Sunrise Realty 2018</p>
+      </div>
+    </section>
 
 
 
