change detail page

--- a/v1.0 - 1/apartment.html
+++ b/v1.0 - 1/apartment.html
@@ -20,24 +20,7 @@
           </a>
       </div>
       <div id="header2">
-        <table class="menu">
-        <tr>
-          <td><a href="aboutCompany.html">About Company</a></td>
-          <td><a href="search.html">Search</a></td>
-        </tr>
-        <tr>
-          <td><a href="officialStatement.html">Official Statement</a></td>
-          <td><a href="house.html">House</a></td>
-        </tr>
-        <tr>
-          <td><a href="salesTeam.html">Sales Team</a></td>
-          <td><a href="apartment.html">Apartment</a></td>
-        </tr>
-        <tr>
-          <td><a href="contactUs.html">Contact Us</a></td>
-          <td><a href="townhouse.html">Townhouse</a></td>
-        </tr>
-      </table>
+
       </div>
         <div id="header3">
           <form>
@@ -48,7 +31,7 @@
         <div id="header4">
           <div class="nav-main" id="find">
             <button type="button">Menu</button>
-            <div class="dropdown-content">
+            <div id="dropdown-content">
               <a href="aboutCompany.html">About Company</a>
                 <a href="officialStatement.html">Official Statement</a>
                 <a href="salesTeam.html">Sales Team</a>
@@ -62,6 +45,20 @@
 
 
         </div>
+    </div>
+    <div id="header5">
+      <div class="nav"><a href="aboutCompany.html">About Company</a></div>
+      <div class="nav"><a href="salesTeam.html">Sales Team</a></div>
+      <div id="drop-menu" class="nav">
+        <div><a href="search.html">Find Realty</a></div>
+        <div id="dropdown-content2">
+          <a href="house.html">House</a>
+          <a href="apartment.html">Apartment</a>
+          <a href="townhouse.html">Townhouse</a>
+        </div>
+      </div>
+
+      <div class="nav"><a href="contactUs.html">Contact Us</a></div>
     </div>
     </section>
     <section>
@@ -275,7 +272,7 @@
       </section>
 
 
-     <section id="footer">
+        <section id="footer">
       <div id="footercont">
         <table class="menu">
         <tr>
@@ -292,20 +289,20 @@
         </tr>
          <tr>
 
-          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="salesTeam.html">Sales Team</a></td>
           <td><a href="apartment.html">Find Apartment</a></td>
           <td><a href="bby.html">Burnaby</a></td>
           <td><a>Twitter</a></td>
         </tr>
          <tr>
 
-          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="search.html">Find Realty</a></td>
           <td><a href="townhouse.html">Find Townhouse</a></td>
           <td><a href="van.html">Vancouver</a></td>
           <td><a>Pinterest</a></td>
         </tr>
          <tr>
-          <td><a href="search.html">Search</a></td>
+          <td><a href="contactUs.html">Contact Us</a></td>
           <td></td>
           <td><a href="surrey.html">Surrey</a></td>
           <td><a>Google+</a></td>
@@ -317,6 +314,7 @@
         <p id="cr">Copyright Sunrise Realty 2018</p>
       </div>
     </section>
+
 
   </body>
 </html>
