--- a/v1.0 - 1/detail.html
+++ b/v1.0 - 1/detail.html
@@ -20,24 +20,7 @@
           </a>
       </div>
       <div id="header2">
-        <table class="menu">
-        <tr>
-          <td><a href="aboutCompany.html">About Company</a></td>
-          <td><a href="search.html">Search</a></td>
-        </tr>
-        <tr>
-          <td><a href="officialStatement.html">Official Statement</a></td>
-          <td><a href="house.html">House</a></td>
-        </tr>
-        <tr>
-          <td><a href="salesTeam.html">Sales Team</a></td>
-          <td><a href="apartment.html">Apartment</a></td>
-        </tr>
-        <tr>
-          <td><a href="contactUs.html">Contact Us</a></td>
-          <td><a href="townhouse.html">Townhouse</a></td>
-        </tr>
-      </table>
+
       </div>
         <div id="header3">
           <form>
@@ -48,7 +31,7 @@
         <div id="header4">
           <div class="nav-main" id="find">
             <button type="button">Menu</button>
-            <div class="dropdown-content">
+            <div id="dropdown-content">
               <a href="aboutCompany.html">About Company</a>
                 <a href="officialStatement.html">Official Statement</a>
                 <a href="salesTeam.html">Sales Team</a>
@@ -63,11 +46,37 @@
 
         </div>
     </div>
+    <div id="header5">
+      <div class="nav"><a href="aboutCompany.html">About Company</a></div>
+      <div class="nav"><a href="salesTeam.html">Sales Team</a></div>
+      <div id="drop-menu" class="nav">
+        <div><a href="search.html">Find Realty</a></div>
+        <div id="dropdown-content2">
+          <a href="house.html">House</a>
+          <a href="apartment.html">Apartment</a>
+          <a href="townhouse.html">Townhouse</a>
+        </div>
+      </div>
+
+      <div class="nav"><a href="contactUs.html">Contact Us</a></div>
+    </div>
     </section>
     <section>
-        <div id="banner">
-      <img src="img/listing.png" alt="banner">
+    <div id="image-show">
+      <div id="imagecont">
+        <img id="large" src="img/listing.png">
+        <div id="small">
+          <img src="img/listing.png">
+          <img src="img/banner.jpg">
+          <img src="img/map.png">
+          <img src="img/listing.png">
+          <img src="img/listing.png">
+        </div>
     </div>
+  </div>
+  <h2>
+          Information
+        </h2>
       <div id="detail-info">
 
           <table class="menu">
@@ -109,9 +118,7 @@
         </tr>
       </table>
     </div>
-        <div class="more">
-          <a href="contactUs.html" class="button-nav" >Contact Us</a>
-        </div>
+
 
        <section>
       <div class="infor">
@@ -126,10 +133,18 @@
         <p>balabalalbala</p>
       </div>
   </section>
-
+  <div>
+    <h3>
+          Feel Interested ?
+        </h3>
+  <div class="more">
+          <a href="contactUs.html" class="button-nav" >Contact Us Now</a>
+        </div>
     </section>
+  </div>
 
-         <section id="footer">
+
+    <section id="footer">
       <div id="footercont">
         <table class="menu">
         <tr>
@@ -146,20 +161,20 @@
         </tr>
          <tr>
 
-          <td><a href="officialStatement.html">Official Statement</a></td>
+          <td><a href="salesTeam.html">Sales Team</a></td>
           <td><a href="apartment.html">Find Apartment</a></td>
           <td><a href="bby.html">Burnaby</a></td>
           <td><a>Twitter</a></td>
         </tr>
          <tr>
 
-          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="search.html">Find Realty</a></td>
           <td><a href="townhouse.html">Find Townhouse</a></td>
           <td><a href="van.html">Vancouver</a></td>
           <td><a>Pinterest</a></td>
         </tr>
          <tr>
-          <td><a href="search.html">Search</a></td>
+          <td><a href="contactUs.html">Contact Us</a></td>
           <td></td>
           <td><a href="surrey.html">Surrey</a></td>
           <td><a>Google+</a></td>
@@ -171,6 +186,7 @@
         <p id="cr">Copyright Sunrise Realty 2018</p>
       </div>
     </section>
+
 
 
   </body>
