--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -13,55 +13,52 @@
 
   <body>
   	<section id="header">
-  		<div id="headercont">
-  		<div id="header1">
-        	<a href="home.html">
-          		<img src="img/logo.png" alt="logo">
-        	</a>
-    	</div>
-    	<div id="header2">
-    		<table class="menu">
-			  <tr>
-			    <td><a href="aboutCompany.html">About Company</a></td>
-			    <td><a href="search.html">Search</a></td>
-			  </tr>
-			  <tr>
-			    <td><a href="officialStatement.html">Official Statement</a></td>
-			    <td><a href="house.html">House</a></td>
-			  </tr>
-			  <tr>
-			    <td><a href="salesTeam.html">Sales Team</a></td>
-			    <td><a href="apartment.html">Apartment</a></td>
-			  </tr>
-			  <tr>
-			    <td><a href="contactUs.html">Contact Us</a></td>
-			    <td><a href="townhouse.html">Townhouse</a></td>
-			  </tr>
-			</table>
-    	</div>
+      <div id="headercont">
+      <div id="header1">
+          <a href="home.html">
+              <img src="img/logo.png" alt="logo">
+          </a>
+      </div>
+      <div id="header2">
+
+      </div>
         <div id="header3">
-         	<form>
-            	<input type="text" area="Area" class="search-box">
-            	<input type="submit" value=" Search " class="button">
-          	</form>
+          <form>
+              <input type="text" area="Area" class="search-box">
+              <input type="submit" value=" Search " class="button">
+            </form>
         </div>
         <div id="header4">
-        	<div class="nav-main" id="find">
+          <div class="nav-main" id="find">
             <button type="button">Menu</button>
-            <div class="dropdown-content">
-            	<a href="aboutCompany.html">About Company</a>
-              	<a href="officialStatement.html">Official Statement</a>
-              	<a href="salesTeam.html">Sales Team</a>
-              	<a href="contactUs.html">Contact Us</a>
-              	<a href="search.html">Search</a>
-              	<a href="house.html">House</a>
-              	<a href="apartment.html">Apartment</a>
-              	<a href="townhouse.html">Townhouse</a>
+            <div id="dropdown-content">
+              <a href="aboutCompany.html">About Company</a>
+                <a href="officialStatement.html">Official Statement</a>
+                <a href="salesTeam.html">Sales Team</a>
+                <a href="contactUs.html">Contact Us</a>
+                <a href="search.html">Search</a>
+                <a href="house.html">House</a>
+                <a href="apartment.html">Apartment</a>
+                <a href="townhouse.html">Townhouse</a>
             </div>
           </div>
 
 
         </div>
+    </div>
+    <div id="header5">
+      <div class="nav"><a href="aboutCompany.html">About Company</a></div>
+      <div class="nav"><a href="salesTeam.html">Sales Team</a></div>
+      <div id="drop-menu" class="nav">
+        <div><a href="search.html">Find Realty</a></div>
+        <div id="dropdown-content2">
+          <a href="house.html">House</a>
+          <a href="apartment.html">Apartment</a>
+          <a href="townhouse.html">Townhouse</a>
+        </div>
+      </div>
+
+      <div class="nav"><a href="contactUs.html">Contact Us</a></div>
     </div>
     </section>
     <div id="banner">
@@ -167,20 +164,20 @@
 			  </tr>
 			   <tr>
 
-			    <td><a href="officialStatement.html">Official Statement</a></td>
+			    <td><a href="salesTeam.html">Sales Team</a></td>
 			    <td><a href="apartment.html">Find Apartment</a></td>
 			    <td><a href="bby.html">Burnaby</a></td>
 			    <td><a>Twitter</a></td>
 			  </tr>
 			   <tr>
 
-			    <td><a href="salesTeam.html">Sales Team</a></td>
+			    <td><a href="search.html">Find Realty</a></td>
 			    <td><a href="townhouse.html">Find Townhouse</a></td>
 			    <td><a href="van.html">Vancouver</a></td>
 			    <td><a>Pinterest</a></td>
 			  </tr>
 			   <tr>
-			    <td><a href="search.html">Search</a></td>
+			    <td><a href="contactUs.html">Contact Us</a></td>
 			    <td></td>
 			    <td><a href="surrey.html">Surrey</a></td>
 			    <td><a>Google+</a></td>
