change banner and add some button
change layout

--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
 
@@ -17,10 +18,11 @@
       <div id="header1">
           <a href="home.html">
               <img src="img/logo.png" alt="logo">
+
           </a>
       </div>
       <div id="header2">
-
+        <h1 id="cname">Sunrise Realty</h1>
       </div>
         <div id="header3">
           <form>
@@ -33,13 +35,12 @@
             <button type="button">Menu</button>
             <div id="dropdown-content">
               <a href="aboutCompany.html">About Company</a>
-                <a href="officialStatement.html">Official Statement</a>
                 <a href="salesTeam.html">Sales Team</a>
-                <a href="contactUs.html">Contact Us</a>
                 <a href="search.html">Search</a>
                 <a href="house.html">House</a>
                 <a href="apartment.html">Apartment</a>
                 <a href="townhouse.html">Townhouse</a>
+                <a href="contactUs.html">Contact Us</a>
             </div>
           </div>
 
@@ -47,11 +48,13 @@
         </div>
     </div>
     <div id="header5">
-      <div class="nav"><a href="aboutCompany.html">About Company</a></div>
+      <div class="nav"><a href="home.html">Home</a></div>
+      <div class="nav"><a href="aboutCompany.html">About</a></div>
       <div class="nav"><a href="salesTeam.html">Sales Team</a></div>
       <div id="drop-menu" class="nav">
         <div><a href="search.html">Find Realty</a></div>
         <div id="dropdown-content2">
+          <a href="search.html">Search</a>
           <a href="house.html">House</a>
           <a href="apartment.html">Apartment</a>
           <a href="townhouse.html">Townhouse</a>
@@ -63,6 +66,8 @@
     </section>
     <div id="banner">
       <img src="img/banner.jpg" alt="banner">
+      <a id="link" href="search.html">Find Realty Now</a>
+    </section>
     </div>
 
     <section>
@@ -71,22 +76,22 @@
       <div class="box">
         <div class="sales">
           <figure>
-            <img src="img/sales.jpg" alt="sales">
-            <figcaption>Sales Name</figcaption>
+            <img src="img/Annawong.jpeg" alt="sales">
+            <figcaption>Anna Wong</figcaption>
           </figure>
         </div>
 
         <div class="sales">
           <figure>
-            <img src="img/sales.jpg" alt="sales">
-            <figcaption>Sales Name</figcaption>
+            <img src="img/Henryzhou.jpeg" alt="sales">
+            <figcaption>Henry Zhou</figcaption>
           </figure>
         </div>
 
         <div class="sales">
           <figure>
-            <img src="img/sales.jpg" alt="sales">
-            <figcaption>Sales Name</figcaption>
+            <img src="img/Ivanliu.jpeg" alt="sales">
+            <figcaption>Ivan Liu</figcaption>
           </figure>
         </div>
       </div>
@@ -101,44 +106,62 @@
         <div class="box">
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing1.jpg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing2.jpeg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing3.jpg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing4.jpg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing5.jpeg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
           <div class="listing">
             <figure>
-              <img src="img/listing.png" alt="listing">
+              <img src="img/listing6.jpeg" alt="listing">
               <figcaption>Property info</figcaption>
             </figure>
+            <div class="more">
+              <a href="detail.html">Detail</a>
+            </div>
           </div>
 
         </div>
