--- a/v1.0 - 1/rmd.html
+++ b/v1.0 - 1/rmd.html
@@ -5,6 +5,7 @@
     <title>Contact Us - Richmond</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
 
@@ -17,10 +18,11 @@
       <div id="header1">
           <a href="home.html">
               <img src="img/logo.png" alt="logo">
+
           </a>
       </div>
       <div id="header2">
-
+        <h1 id="cname">Sunrise Realty</h1>
       </div>
         <div id="header3">
           <form>
@@ -33,13 +35,12 @@
             <button type="button">Menu</button>
             <div id="dropdown-content">
               <a href="aboutCompany.html">About Company</a>
-                <a href="officialStatement.html">Official Statement</a>
                 <a href="salesTeam.html">Sales Team</a>
-                <a href="contactUs.html">Contact Us</a>
                 <a href="search.html">Search</a>
                 <a href="house.html">House</a>
                 <a href="apartment.html">Apartment</a>
                 <a href="townhouse.html">Townhouse</a>
+                <a href="contactUs.html">Contact Us</a>
             </div>
           </div>
 
@@ -47,11 +48,13 @@
         </div>
     </div>
     <div id="header5">
-      <div class="nav"><a href="aboutCompany.html">About Company</a></div>
+      <div class="nav"><a href="home.html">Home</a></div>
+      <div class="nav"><a href="aboutCompany.html">About</a></div>
       <div class="nav"><a href="salesTeam.html">Sales Team</a></div>
       <div id="drop-menu" class="nav">
         <div><a href="search.html">Find Realty</a></div>
         <div id="dropdown-content2">
+          <a href="search.html">Search</a>
           <a href="house.html">House</a>
           <a href="apartment.html">Apartment</a>
           <a href="townhouse.html">Townhouse</a>
