add most content

--- a/v1.0 - 1/contactUs.html
+++ b/v1.0 - 1/contactUs.html
@@ -72,7 +72,7 @@
         <div class="location">
         	<a href="rmd.html">
           <figure>
-            <img src="img/map.png" alt="map">
+            <img src="img/rmdoffice.jpeg" alt="map">
             <figcaption>Richmond</figcaption>
           </figure>
       </a>
@@ -81,7 +81,7 @@
         <div class="location">
         	<a href="bby.html">
           <figure>
-            <img src="img/map.png" alt="map">
+            <img src="img/bbyoffice.jpg" alt="map">
             <figcaption>Burnaby</figcaption>
           </figure>
           </a>
@@ -90,7 +90,7 @@
         <div class="location">
         	<a href="van.html">
           <figure>
-            <img src="img/map.png" alt="map">
+            <img src="img/vanoffice.jpeg" alt="map">
             <figcaption>Vancouver</figcaption>
           </figure>
           </a>
@@ -99,7 +99,7 @@
         <div class="location">
         	<a href="surrey.html">
           <figure>
-            <img src="img/map.png" alt="map">
+            <img src="img/surreyoffice.jpg" alt="map">
             <figcaption>Surrey</figcaption>
           </figure>
           </a>
