--- a/v1.0 - 1/detail.html
+++ b/v1.0 - 1/detail.html
@@ -67,13 +67,13 @@
     <section>
     <div id="image-show">
       <div id="imagecont">
-        <img id="large" src="img/listing.png">
+        <img id="large" src="img/listing1.jpg">
         <div id="small">
-          <img src="img/listing.png">
-          <img src="img/banner.jpg">
-          <img src="img/map.png">
-          <img src="img/listing.png">
-          <img src="img/listing.png">
+          <img src="img/detail1.jpeg">
+          <img src="img/detail2.jpeg">
+          <img src="img/detail3.jpeg">
+          <img src="img/detail4.jpeg">
+          <img src="img/detail5.jpeg">
         </div>
     </div>
   </div>
@@ -85,21 +85,21 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$999,999</td>
+          <td>$1256,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
         <tr>
           <th>Area:</th>
-          <td>Richmond</td>
+          <td>Burnaby</td>
           <th>Bathroom:</th>
           <td>2</td>
         </tr>
         <tr>
           <th>Address:</th>
-          <td>123 No. 3 Road</td>
+          <td>123 Telford Ave</td>
           <th>Year:</th>
-          <td>2018</td>
+          <td>2008</td>
         </tr>
         <tr>
           <th>Price:</th>
@@ -128,12 +128,10 @@
         <h2>
           Description
         </h2>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
+        <p>Welcome to this beautiful well maintained home in Burnaby. This home features 7 spacious bedrooms & 5 bathrooms. Master bedroom has a spa like ensuite. This home also comes with a triple garage</p>
+        <p> and a huge private backyard fully fenced. Perfect for family gatherings or summer BBQ. Good mortgage helper opportunity with the separate entrance and 2 bedrooms in the basement. Close to all</p>
+        <p>levels of schools including BCIT. Walking distance to bus stops. Come see it today!! *OPEN HOUSE* FEB. 24th & 25th 2pm-4pm</p>
+
       </div>
   </section>
   <div id="buy">
@@ -141,7 +139,7 @@
           Feel Interested ?
         </h3>
   <div class="more">
-          <a href="contactUs.html" class="button-nav" >Contact Us Now</a>
+          <a href="contactUs.html" class="button-nav" >Contact Us Now!</a>
         </div>
     </section>
   </div>
