--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -107,7 +107,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing1.jpg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Burnaby| $1256,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -117,7 +117,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing2.jpeg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Richmond| $1286,600</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -127,7 +127,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing3.jpg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Burnaby| $1086,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -137,7 +137,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing4.jpg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Vancouver| $1586,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -147,7 +147,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing5.jpeg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Vancouver| $1626,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -157,7 +157,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing6.jpeg" alt="listing">
-              <figcaption>Property info</figcaption>
+              <figcaption>Surrey| $986,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
